test/org/midica/testfiles/failing/oto-before-block-2.midica
INCLUDE inc/instruments.midica

1: c
{
	1: c (m)
	{
		1: d e
	}
	1: f
}
1: g
